# micromouse-simulation

./: .gitignore  README.md  readthedocs.yml
.github/workflows/: docs-pages.yml
controllers/: CMakeLists.txt
controllers/mms_controller/: CMakeLists.txt  DistanceSensorComponent.hpp  IComponent.hpp  MotorComponent.hpp  mms_controller  mms_controller.cpp  sim_host
controllers/mms_controller/arduino_src/: CMakeLists.txt  main.c  raw_firmware.elf
controllers/mms_controller/arduino_src/arduino_mms_sim/src/: main.cpp
controllers/mms_controller/tests/: simavr_test.c
controllers/test_mms_controller/: test_mms_controller.py
docs/: architecture.rst  build_and_run.rst  component_mapping.rst  conf.py  creating_components.rst  development_roadmap.rst  firmware_workflow.rst  index.rst  overview.rst  quickstart.rst  requirements.txt  simulation_loop.rst
docs/_static/: custom.css
models/: mms-chassies.dae
worlds/: .mms-sim.wbproj  mms-sim.wbt
